# iloveshp

./: README.md  pyproject.toml
src/iloveshp/: main.py
src/iloveshp/config/: settings.py
src/iloveshp/core/converter/: converter_abs.py  converter_factory.py  kmz_converter.py
src/iloveshp/core/reader/: reader_abs.py  reader_factory.py  shapefile_reader.py
src/iloveshp/database/: db_manager.py
src/iloveshp/utils/: file_utils.py
